--- a/files/1_Python/1_fonctions_cor.ipynb
+++ b/files/1_Python/1_fonctions_cor.ipynb
@@ -18,10 +18,10 @@
    "id": "b89ae14f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:37.986614Z",
-     "iopub.status.busy": "2021-11-12T18:50:37.986073Z",
-     "iopub.status.idle": "2021-11-12T18:50:37.994595Z",
-     "shell.execute_reply": "2021-11-12T18:50:37.995077Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.709186Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.708345Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.713270Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.711961Z"
     }
    },
    "outputs": [],
@@ -56,10 +56,10 @@
    "id": "c18fdda0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.004852Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.002544Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.007647Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.008043Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.723300Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.722589Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.728847Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.728352Z"
     }
    },
    "outputs": [
@@ -92,10 +92,10 @@
    "id": "76d000ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.012405Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.011748Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.056243Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.055810Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.733102Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.732546Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.782072Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.781614Z"
     }
    },
    "outputs": [
@@ -132,10 +132,10 @@
    "id": "ba3112f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.061098Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.059768Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.061654Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.062213Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.786897Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.786387Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.789405Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.789854Z"
     }
    },
    "outputs": [],
@@ -160,6 +160,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0b083e8e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:57:58.794932Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.792124Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.800163Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.799658Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "42.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1.\n",
+    "def g(z):\n",
+    "    return (z**2 - 1)*z**0.5\n",
+    "\n",
+    "# 2.\n",
+    "print(g(4))\n",
+    "\n",
+    "# 3.\n",
+    "def h(x):\n",
+    "    return 3*x + g(x)\n",
+    "h(4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "74883331",
    "metadata": {
@@ -171,6 +219,44 @@
     "**Exercice 2**\n",
     "1. Définir la fonction $inv : x \\longmapsto \\frac{1}{x}$ en Python.\n",
     "2. En réutilisant `inv`, définir $f : x \\longmapsto \\frac{1}{1+x^2}$ en Python. Vérifier que $f(2) = 0.2$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5d111a6f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:57:58.805200Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.804683Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.809816Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.809281Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1.\n",
+    "def inv(x):\n",
+    "    return 1/x\n",
+    "\n",
+    "# 2.\n",
+    "def f(x):\n",
+    "    return inv(1 + x**2)\n",
+    "f(2)"
    ]
   },
   {
@@ -197,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bab8711d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.066696Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.066171Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.068672Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.068241Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.813654Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.813126Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.816943Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.816519Z"
     }
    },
    "outputs": [],
@@ -223,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b83d75c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.074465Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.073329Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.076681Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.076173Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.820936Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.820447Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.825379Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.825757Z"
     }
    },
    "outputs": [
@@ -240,7 +326,7 @@
        "7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "37677e0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.086368Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.085330Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.087960Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.088339Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.829903Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.829415Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.833724Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.833322Z"
     }
    },
    "outputs": [
@@ -276,7 +362,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,6 +386,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0ec83a13",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:57:58.840786Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.839761Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.842569Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.843001Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def delta(a, b, c):\n",
+    "    return b**2 - 4*a*c\n",
+    "delta(1, 2, 3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "90b06d54",
    "metadata": {},
@@ -310,14 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a81a7a5c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.092825Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.091983Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.178447Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.178943Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.846898Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.846384Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.937890Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.938469Z"
     }
    },
    "outputs": [
@@ -327,7 +446,7 @@
        "2.718281828459045"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,14 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "85fd3525",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.182074Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.181117Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.187448Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.188116Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.941117Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.940577Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.944986Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.945528Z"
     }
    },
    "outputs": [
@@ -357,7 +476,7 @@
        "0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,14 +495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "c781895b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:38.191234Z",
-     "iopub.status.busy": "2021-11-12T18:50:38.190209Z",
-     "iopub.status.idle": "2021-11-12T18:50:38.196679Z",
-     "shell.execute_reply": "2021-11-12T18:50:38.197344Z"
+     "iopub.execute_input": "2021-11-12T18:57:58.948052Z",
+     "iopub.status.busy": "2021-11-12T18:57:58.947511Z",
+     "iopub.status.idle": "2021-11-12T18:57:58.952123Z",
+     "shell.execute_reply": "2021-11-12T18:57:58.952653Z"
     }
    },
    "outputs": [
@@ -393,7 +512,7 @@
        "0.9999546021312976"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
