--- a/files/1_Python/3_boucles_cor.ipynb
+++ b/files/1_Python/3_boucles_cor.ipynb
@@ -32,10 +32,10 @@
    "id": "d13fd333-ad1e-4cf8-afa2-2059e086e498",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.193828Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.192318Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.195959Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.196373Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.262610Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.261739Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.271641Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.271107Z"
     }
    },
    "outputs": [
@@ -90,6 +90,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3d0a0cd-f0c1-4351-a9f6-8e0072ccff54",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "$n$ fois (c'est aussi le nombre d'entiers dans $\\{0, ..., n - 1\\}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cebe150-c963-4bc8-83bb-6805f4c8aaea",
    "metadata": {},
    "source": [
@@ -102,10 +114,10 @@
    "id": "dce6b7fd-9eb3-41fe-992e-ff767f1910e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.206651Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.206049Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.208701Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.209084Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.283375Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.282420Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.286160Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.285703Z"
     }
    },
    "outputs": [
@@ -140,6 +152,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7aa61e6f-f86c-4da8-93fe-7c809abafac9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.291356Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.290576Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.293151Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.293559Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4950.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 100\n",
+    "n*(n-1)/2  # formule de Gauss"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8c528612-8fda-44be-b151-c3587ba54337",
    "metadata": {},
@@ -149,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4481ea36-17ca-414c-8532-0ac8b200f0b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.213024Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.212294Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.215490Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.215829Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.298300Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.297688Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.299864Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.300354Z"
     }
    },
    "outputs": [
@@ -188,6 +232,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "39fae656-b2eb-4d41-8447-1f4510ad8336",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.305119Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.304617Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.309838Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.309366Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.519713441477826"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "somme_racine = 0\n",
+    "for i in range(5, 21):\n",
+    "    somme_racine += i**0.5\n",
+    "somme_racine"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0db61e3d-dccb-4e83-bce4-a0730a262268",
    "metadata": {
@@ -197,6 +275,43 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `fact` telle que `fact(n)` renvoie $n!$ ($n$ factorielle), c'est à dire $n\\times(n-1)\\times ... \\times 2 \\times1$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "27896cfd-b474-4d5a-9bb3-66aa0b495d65",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.316920Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.313833Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.318755Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.318302Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fact(n):\n",
+    "    res = 1\n",
+    "    for i in range(2, n+1):\n",
+    "        res *= i  # pareil que res = res * i\n",
+    "    return res\n",
+    "\n",
+    "fact(6)"
    ]
   },
   {
@@ -217,6 +332,40 @@
    },
    "source": [
     "**Exercice** : Calculer $u_{10}$, où $u_n$ est définie par $u_0 = 42$ et $u_{n+1} = \\sqrt{u_n} + 3u_n$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e836b883-e014-4061-a0af-5964bf3bba01",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.323139Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.322623Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.325940Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.325475Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2787204.895558157"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "un = 42\n",
+    "for _ in range(10):\n",
+    "    un = un**.5 + 3*un\n",
+    "un"
    ]
   },
   {
@@ -245,14 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "5fbd68e7-18e2-4fa7-a24b-e3c312c9a897",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.221408Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.220248Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.222978Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.222589Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.330403Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.329823Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.332885Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.332373Z"
     }
    },
    "outputs": [
@@ -284,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "5f0955a9-8a4a-4a52-a85d-625df5285bbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.227908Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.226835Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.229663Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.229254Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.338021Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.337011Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.339501Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.339915Z"
     }
    },
    "outputs": [
@@ -325,6 +474,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7e593b30-cd35-49c2-a60d-1070ee246d0c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.342798Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.341990Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.346853Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.346261Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def somme(L):\n",
+    "    res = 0\n",
+    "    for e in L:\n",
+    "        res += e\n",
+    "    return res"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5c337a3f-25e4-484b-91c8-c5d00d3e14b1",
    "metadata": {
@@ -334,6 +507,30 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `appartient` telle que `appartient(x, L)` renvoie `True` si `x` appartient à la liste `L`, `False` sinon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c3d1d1bf-315c-42ef-ac84-757ead864253",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.351376Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.350811Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.354331Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.353836Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def appartient(x, L):\n",
+    "    for e in L:\n",
+    "        if x == e:\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
@@ -351,6 +548,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7d011306-a4f2-4711-a55c-32855ee1b1a2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-12T18:58:03.359990Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.358803Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.360558Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.360973Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# 1.\n",
+    "def croissant(L):\n",
+    "    for i in range(len(L) - 1): # ici on est obligé de parcourir les indices pour comparer 2 éléments consécutifs\n",
+    "        if L[i] > L[i+1]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# 2.\n",
+    "def decroissant(L):\n",
+    "    return not croissant(L)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2d095508-b12f-42e4-9ae7-1a5224b9fdfa",
    "metadata": {},
@@ -360,14 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "3e4e2759-5ff0-457c-9c16-0151e5ed5ea9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.234412Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.233968Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.236096Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.236450Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.364871Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.364237Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.367178Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.366761Z"
     }
    },
    "outputs": [
@@ -406,14 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "1b1eb68f-1523-4000-94f4-053b3caade0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-12T18:50:44.240048Z",
-     "iopub.status.busy": "2021-11-12T18:50:44.239573Z",
-     "iopub.status.idle": "2021-11-12T18:50:44.242449Z",
-     "shell.execute_reply": "2021-11-12T18:50:44.241817Z"
+     "iopub.execute_input": "2021-11-12T18:58:03.371142Z",
+     "iopub.status.busy": "2021-11-12T18:58:03.370625Z",
+     "iopub.status.idle": "2021-11-12T18:58:03.373268Z",
+     "shell.execute_reply": "2021-11-12T18:58:03.372832Z"
     }
    },
    "outputs": [
