--- a/files/1_Python/3_boucles.ipynb
+++ b/files/1_Python/3_boucles.ipynb
@@ -5,24 +5,10 @@
    "id": "9ee4445d-5a4b-4bbe-8bb4-d31dbba09556",
    "metadata": {},
    "source": [
-    "# Boucle for"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4cf522b3-958a-4df0-b9ba-815d5d1e9d1e",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Range"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "551c1244-d2ed-4a93-9fa2-2f3bfb876050",
-   "metadata": {},
-   "source": [
+    "# Boucle for\n",
+    "\n",
+    "## Range\n",
+    "\n",
     "Une boucle `for` permet de répéter des instructions un certain nombre de fois :"
    ]
   },
@@ -32,10 +18,10 @@
    "id": "d13fd333-ad1e-4cf8-afa2-2059e086e498",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.649333Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.646983Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.653441Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.654049Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.369701Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.368797Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.382149Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.382538Z"
     }
    },
    "outputs": [
@@ -114,10 +100,10 @@
    "id": "dce6b7fd-9eb3-41fe-992e-ff767f1910e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.669412Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.667013Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.673952Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.674403Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.393510Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.390770Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.396283Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.396762Z"
     }
    },
    "outputs": [
@@ -157,10 +143,10 @@
    "id": "7aa61e6f-f86c-4da8-93fe-7c809abafac9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.683277Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.679252Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.689743Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.690336Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.401638Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.401121Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.403523Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.403899Z"
     },
     "tags": [
      "cor"
@@ -197,10 +183,10 @@
    "id": "4481ea36-17ca-414c-8532-0ac8b200f0b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.695036Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.693921Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.698457Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.697892Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.410391Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.408840Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.411931Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.411528Z"
     }
    },
    "outputs": [
@@ -237,10 +223,10 @@
    "id": "39fae656-b2eb-4d41-8447-1f4510ad8336",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.707498Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.706641Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.709732Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.708328Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.416271Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.415822Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.419022Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.418657Z"
     },
     "tags": [
      "cor"
@@ -283,10 +269,10 @@
    "id": "27896cfd-b474-4d5a-9bb3-66aa0b495d65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.715619Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.715079Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.717603Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.719620Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.424066Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.423606Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.426059Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.426439Z"
     },
     "tags": [
      "cor"
@@ -340,10 +326,10 @@
    "id": "e836b883-e014-4061-a0af-5964bf3bba01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.725651Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.725134Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.727678Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.728169Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.431908Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.431392Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.433973Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.434351Z"
     },
     "tags": [
      "cor"
@@ -398,10 +384,10 @@
    "id": "5fbd68e7-18e2-4fa7-a24b-e3c312c9a897",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.732294Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.731415Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.734773Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.734261Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.439765Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.439047Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.441549Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.441940Z"
     }
    },
    "outputs": [
@@ -437,10 +423,10 @@
    "id": "5f0955a9-8a4a-4a52-a85d-625df5285bbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.740649Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.739328Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.742297Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.741836Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.447413Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.446124Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.449495Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.449904Z"
     }
    },
    "outputs": [
@@ -479,10 +465,10 @@
    "id": "7e593b30-cd35-49c2-a60d-1070ee246d0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.747967Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.745890Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.748629Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.749085Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.454867Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.453720Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.455637Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.456027Z"
     },
     "tags": [
      "cor"
@@ -515,10 +501,10 @@
    "id": "c3d1d1bf-315c-42ef-ac84-757ead864253",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.754553Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.753218Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.755164Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.755734Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.459951Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.459480Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.462775Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.463216Z"
     },
     "tags": [
      "cor"
@@ -553,10 +539,10 @@
    "id": "7d011306-a4f2-4711-a55c-32855ee1b1a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.762559Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.761545Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.764701Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.764205Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.467505Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.465523Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.470050Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.469666Z"
     },
     "tags": [
      "cor"
@@ -590,10 +576,10 @@
    "id": "3e4e2759-5ff0-457c-9c16-0151e5ed5ea9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.772203Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.770921Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.773933Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.772732Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.475673Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.474412Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.477439Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.476841Z"
     }
    },
    "outputs": [
@@ -636,10 +622,10 @@
    "id": "1b1eb68f-1523-4000-94f4-053b3caade0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:36.779996Z",
-     "iopub.status.busy": "2021-11-13T11:06:36.778778Z",
-     "iopub.status.idle": "2021-11-13T11:06:36.781931Z",
-     "shell.execute_reply": "2021-11-13T11:06:36.781444Z"
+     "iopub.execute_input": "2021-11-13T11:13:32.481732Z",
+     "iopub.status.busy": "2021-11-13T11:13:32.481122Z",
+     "iopub.status.idle": "2021-11-13T11:13:32.483348Z",
+     "shell.execute_reply": "2021-11-13T11:13:32.483699Z"
     }
    },
    "outputs": [
