Improve tp recherche

--- a/files/2_tp_semestre1/2_recherche.ipynb
+++ b/files/2_tp_semestre1/2_recherche.ipynb
@@ -4,41 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Devoir pendant les vacances** : aller sur https://github.com/fortierq/itc1-2021/tree/master/dm et suivre les instructions en bas de page pour rendre le DM (questions de programmation)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Toutes les fonctions doivent être testées par des exemples**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Recherche séquentielle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Ecrire une fonction `appartient` telle que `appartient(e, L)` renvoie `True` si `e` appartient à `L`, `False` sinon."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Ecrire une `maximum` renvoyant le maximum d'une liste. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Dictionnaire et recherche séquentielle\n",
+    "\n",
+    "1. Ecrire une fonction `appartient` telle que `appartient(e, L)` renvoie `True` si `e` appartient à `L`, `False` sinon.  \n",
+    "2. Ecrire une `maximum` renvoyant le maximum d'une liste.  \n",
     "3. Ecrire une fonction `maximum2` renvoyant le deuxième plus grand élément d'une liste. Par exemple `maximum2([2, 1, 3, 0, 5])` doit renvoyer 3 et `maximum2([2, 1, 5, 0, 5])` doit renvoyer 5."
    ]
   },
@@ -46,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dictionnaire\n",
+    "## Dictionnaire\n",
     "\n",
     "Un dictionnaire permet de stocker des associations clés-valeurs : à chaque clé, le dictionnaire donne une valeur. C'est similaire à une liste qui possède une valeur à chaque indice (= clé) sauf que les clés d'un dictionnaire ne sont pas forcément des entiers consécutifs."
    ]
@@ -63,10 +32,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.848700Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.848040Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.850359Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.850803Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.479049Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.478488Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.487029Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.486569Z"
     }
    },
    "outputs": [],
@@ -86,10 +55,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.862828Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.862289Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.867551Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.868031Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.497521Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.496558Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.500574Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.501009Z"
     }
    },
    "outputs": [
@@ -120,10 +89,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.873403Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.872038Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.874028Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.874703Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.505825Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.504447Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.506642Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.507144Z"
     }
    },
    "outputs": [],
@@ -143,10 +112,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.879907Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.879125Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.881798Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.882240Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.512327Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.511667Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.514543Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.514943Z"
     }
    },
    "outputs": [
@@ -177,10 +146,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.886944Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.886383Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.888929Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.889346Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.520224Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.519227Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.521816Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.522337Z"
     }
    },
    "outputs": [
@@ -211,10 +180,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.895639Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.894033Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.897393Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.896912Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.527962Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.526782Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.529743Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.529254Z"
     }
    },
    "outputs": [
@@ -245,10 +214,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T11:06:40.901635Z",
-     "iopub.status.busy": "2021-11-13T11:06:40.900843Z",
-     "iopub.status.idle": "2021-11-13T11:06:40.903286Z",
-     "shell.execute_reply": "2021-11-13T11:06:40.902836Z"
+     "iopub.execute_input": "2021-11-13T12:33:16.534665Z",
+     "iopub.status.busy": "2021-11-13T12:33:16.533408Z",
+     "iopub.status.idle": "2021-11-13T12:33:16.535327Z",
+     "shell.execute_reply": "2021-11-13T12:33:16.535765Z"
     }
    },
    "outputs": [],
@@ -262,13 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Définir un dictionnaire associant 42 à 5 et 23 à 13. Vérifier."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "1. Définir un dictionnaire associant 42 à 5 et 23 à 13. Vérifier.  \n",
     "2. Définir un dictionnaire `d` associant aux chaînes de caractères \"hello\" et \"python\" leurs nombres de caractères (par exemple, il faut que `d[\"hello\"]`soit égal à 5 car `\"hello\"` contient 5 caractères)."
    ]
   },
@@ -278,16 +241,8 @@
    "source": [
     "# Comptage avec un dictionnaire\n",
     "\n",
-    "1. Ecrire une fonction `compter` telle que `compter(L)` renvoie un dictionnaire `d` dont les clés sont les éléments de `L` et les valeurs sont les nombres d'apparitions de chaque éléments. Ainsi, `d[e]` est le nombre de fois que `L[e]` apparaît dans `L`.  \n",
-    "Par exemple, `compter([1, 7, 1, 1, 5, 7])` doit renvoyer `d` tel que `d[1] = 3` (1 apparaît 3 fois), `d[5] = 1` (5 apparaît 1 fois), `d[7] = 2` (7 apparaît 2 fois). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. En déduire une fonction `majoritaire` telle que `majoritaire(L)` renvoie l'élément qui apparaît le plus souvent dans `L`.  \n",
-    "Par exemple, `majoritaire([1, 7, 1, 1, 5, 7])` doit renvoyer 1 (il apparaît plus de fois que n'importe quel autre élément)."
+    "1. Ecrire une fonction `compter` telle que `compter(L)` renvoie un dictionnaire `d` dont les clés sont les éléments de `L` et les valeurs sont les nombres d'apparitions de chaque éléments. Ainsi, `d[e]` est le nombre de fois que `L[e]` apparaît dans `L`. Par exemple, `compter([1, 7, 1, 1, 5, 7])` doit renvoyer `d` tel que `d[1] = 3` (1 apparaît 3 fois), `d[5] = 1` (5 apparaît 1 fois), `d[7] = 2` (7 apparaît 2 fois).  \n",
+    "2. En déduire une fonction `majoritaire` telle que `majoritaire(L)` renvoie l'élément qui apparaît le plus souvent dans `L`. Par exemple, `majoritaire([1, 7, 1, 1, 5, 7])` doit renvoyer 1 (il apparaît plus de fois que n'importe quel autre élément)."
    ]
   },
   {
@@ -302,23 +257,10 @@
     "\\begin{cases} \n",
     "     \\frac{u_n}{2}, \\text{si } n \\text{ est pair}\\\\\n",
     "    3u_n + 1, \\text{sinon}\\\\\n",
-    "\\end{cases}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Ecrire une fonction `syracuse` telle que `syracuse(a, n)` renvoie $u_n$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Le temps de vol de $(u_n)$ est le plus petit entier $t$ tel que $u_t = 1$.  \n",
+    "\\end{cases}$$\n",
     "\n",
-    "2. Ecrire une fonction `temps_vol` telle que `temps_vol(a)` renvoie $t$. "
+    "1. Écrire une fonction `syracuse` telle que `syracuse(a, n)` renvoie $u_n$.  \n",
+    "2. Le temps de vol de $(u_n)$ est le plus petit entier $t$ tel que $u_t = 1$. Écrire une fonction `temps_vol` telle que `temps_vol(a)` renvoie $t$. "
    ]
   }
  ],
