--- a/files/2_tp_semestre1/2_recherche.ipynb
+++ b/files/2_tp_semestre1/2_recherche.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Dictionnaire et recherche séquentielle\n",
     "\n",
+    "## Recherche séquentielle dans une liste\n",
+    "\n",
     "1. Ecrire une fonction `appartient` telle que `appartient(e, L)` renvoie `True` si `e` appartient à `L`, `False` sinon.  \n",
     "2. Ecrire une `maximum` renvoyant le maximum d'une liste.  \n",
     "3. Ecrire une fonction `maximum2` renvoyant le deuxième plus grand élément d'une liste. Par exemple `maximum2([2, 1, 3, 0, 5])` doit renvoyer 3 et `maximum2([2, 1, 5, 0, 5])` doit renvoyer 5."
@@ -32,10 +34,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.479049Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.478488Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.487029Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.486569Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.946122Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.945595Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.953475Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.953067Z"
     }
    },
    "outputs": [],
@@ -55,10 +57,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.497521Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.496558Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.500574Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.501009Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.961761Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.961317Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.964778Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.965114Z"
     }
    },
    "outputs": [
@@ -89,10 +91,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.505825Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.504447Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.506642Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.507144Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.968700Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.967935Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.969451Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.969782Z"
     }
    },
    "outputs": [],
@@ -112,10 +114,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.512327Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.511667Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.514543Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.514943Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.973426Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.972999Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.975021Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.975350Z"
     }
    },
    "outputs": [
@@ -146,10 +148,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.520224Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.519227Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.521816Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.522337Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.979149Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.978712Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.980843Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.981174Z"
     }
    },
    "outputs": [
@@ -180,10 +182,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.527962Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.526782Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.529743Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.529254Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.984616Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.984181Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.986060Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.986373Z"
     }
    },
    "outputs": [
@@ -214,10 +216,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T12:33:16.534665Z",
-     "iopub.status.busy": "2021-11-13T12:33:16.533408Z",
-     "iopub.status.idle": "2021-11-13T12:33:16.535327Z",
-     "shell.execute_reply": "2021-11-13T12:33:16.535765Z"
+     "iopub.execute_input": "2021-11-13T12:39:23.989450Z",
+     "iopub.status.busy": "2021-11-13T12:39:23.989038Z",
+     "iopub.status.idle": "2021-11-13T12:39:23.990904Z",
+     "shell.execute_reply": "2021-11-13T12:39:23.990528Z"
     }
    },
    "outputs": [],
@@ -239,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comptage avec un dictionnaire\n",
+    "## Comptage avec un dictionnaire\n",
     "\n",
     "1. Ecrire une fonction `compter` telle que `compter(L)` renvoie un dictionnaire `d` dont les clés sont les éléments de `L` et les valeurs sont les nombres d'apparitions de chaque éléments. Ainsi, `d[e]` est le nombre de fois que `L[e]` apparaît dans `L`. Par exemple, `compter([1, 7, 1, 1, 5, 7])` doit renvoyer `d` tel que `d[1] = 3` (1 apparaît 3 fois), `d[5] = 1` (5 apparaît 1 fois), `d[7] = 2` (7 apparaît 2 fois).  \n",
     "2. En déduire une fonction `majoritaire` telle que `majoritaire(L)` renvoie l'élément qui apparaît le plus souvent dans `L`. Par exemple, `majoritaire([1, 7, 1, 1, 5, 7])` doit renvoyer 1 (il apparaît plus de fois que n'importe quel autre élément)."
@@ -249,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Suite de Syracuse\n",
+    "## Suite de Syracuse\n",
     "\n",
     "La suite de Syracuse d'un entier $a$ est définie par :  \n",
     "$$u_0 = a$$\n",
